<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/home"
    tools:context=".HomePageActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/corner"
            android:layout_width="59dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/baguette"
            android:baselineAligned="false"
            android:contentDescription="toast icon"
            fab:layout_constraintBottom_toBottomOf="parent"
            fab:layout_constraintEnd_toEndOf="parent"
            fab:layout_constraintHorizontal_bias="0.981"
            fab:layout_constraintStart_toStartOf="parent"
            fab:layout_constraintTop_toTopOf="parent"
            fab:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="Bread"
            android:textSize="20dp"
            fab:layout_constraintEnd_toEndOf="parent"
            fab:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Budgets"
            android:layout_width="match_parent"
            android:layout_height="622dp"
            fab:layout_constraintBottom_toBottomOf="parent"
            fab:layout_constraintEnd_toEndOf="parent"
            fab:layout_constraintHorizontal_bias="0.253"
            fab:layout_constraintStart_toStartOf="parent"
            fab:layout_constraintTop_toTopOf="@+id/fab_menu"
            fab:layout_constraintVertical_bias="0.186" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bellImage"
                android:layout_width="25dp"
                android:layout_height="35dp"
                fab:layout_constraintBottom_toBottomOf="parent"
                fab:layout_constraintEnd_toEndOf="parent"
                fab:layout_constraintHorizontal_bias="0.824"
                fab:layout_constraintStart_toStartOf="parent"
                fab:layout_constraintTop_toTopOf="parent"
                fab:srcCompat="@drawable/bell" />

            <ImageView
                android:id="@+id/reloadImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                fab:layout_constraintBottom_toBottomOf="parent"
                fab:layout_constraintEnd_toEndOf="parent"
                fab:layout_constraintHorizontal_bias="0.203"
                fab:layout_constraintStart_toStartOf="parent"
                fab:layout_constraintTop_toTopOf="parent"
                fab:layout_constraintVertical_bias="0.0"
                fab:srcCompat="@drawable/reload" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="516dp"
        android:layout_height="628dp"
        fab:layout_constraintBottom_toBottomOf="parent"
        fab:layout_constraintEnd_toEndOf="parent"
        fab:layout_constraintStart_toStartOf="parent"
        fab:layout_constraintTop_toTopOf="parent">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="319dp"
            android:layout_height="347dp"
            android:layout_marginEnd="149dp"
            fab:fab_colorNormal="@color/black"
            fab:fab_colorPressed="#444444"
            fab:fab_colorRipple="#99FFFFFF"
            fab:fab_shadowColor="#66000000"
            fab:fab_showShadow="true"
            fab:layout_constraintBottom_toBottomOf="parent"
            fab:layout_constraintEnd_toEndOf="parent"
            fab:layout_constraintStart_toStartOf="parent"
            fab:layout_constraintTop_toTopOf="parent"
            fab:layout_constraintVertical_bias="1.0"
            fab:menu_backgroundColor="#ccffffff"
            fab:menu_fab_label="Choose an action"
            fab:menu_labels_colorNormal="#333333"
            fab:menu_labels_colorPressed="#444444"
            fab:menu_labels_colorRipple="#66FFFFFF"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_position="left"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="true"
            fab:menu_openDirection="up">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"
                fab:fab_label="Logout"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabAddBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_add"
                fab:fab_label="Add a Budget"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabDeleteBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_delete"
                fab:fab_label="Delete recent budget"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabViewTransaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_get"
                fab:fab_label="View Transaction(s)"
                fab:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
