...
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/viewtransaction"
    tools:context=".ViewTransactionActivity">

    <Button
        android:id="@+id/addTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
