<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="120dp"
        android:id="@+id/breadicon"
        android:layout_centerHorizontal="true"
        android:background="@drawable/breadlogo"
        />
    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Create a new account"
        android:layout_below="@id/breadicon"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/usericon"
        android:background="#30ffffff"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:inputType="text"
        android:hint="  Username"
        android:textColor="@color/black"
        android:textColorHint="#b5b5b5"/>


    <EditText
        android:id="@+id/et_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/passwordicon"
        android:background="#30ffffff"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:hint="  Password"
        android:textColor="@color/black"
        android:textColorHint="#b5b5b5"/>

    <EditText
        android:id="@+id/et_cpassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_password"
        android:drawableStart="@drawable/passwordicon"
        android:background="#30ffffff"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:inputType="textPassword"
        android:hint="  Confirm Password"
        android:textColor="@color/black"
        android:textColorHint="#b5b5b5"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:text="Register"
        android:layout_below="@+id/et_cpassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:backgroundTint="@color/black"
        android:text="Login"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>