<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/breadicon"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@drawable/breadlogo" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/breadicon"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:text="Welcome Back!"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_lusername"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/usericon"
        android:hint="  Username"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#b5b5b5" />

    <EditText
        android:id="@+id/et_lpassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_lusername"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/passwordicon"
        android:background="#30ffffff"
        android:hint="  Password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#b5b5b5" />

    <Button
        android:id="@+id/btn_llogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_lpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:backgroundTint="@color/black"
        android:text="Login"/>

    <Button
        android:id="@+id/btn_lregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#00000000"
        android:text="Don't have an account? Register here!"
        android:textColor="@color/black"
        android:textSize="10dp" />
</RelativeLayout>